(almost) completed final project

--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -39,3 +39,28 @@
     src: url('../../fonts/OpenSans-BoldItalic.ttf') format("truetype");
     font-style: normal;
 }
+
+@font-face {
+    font-family: "Spoticon";
+    src: url('../../fonts/spoticon.ttf') format("truetype");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "ProximaNova";
+    src: url('../../fonts/proxima_nova_regular.ttf') format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "ProximaNovaSemiBold";
+    src: url('../../fonts/proxima_nova_semibold.ttf') format("truetype");
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "ProximaNovaThin";
+    src: url('../../fonts/proxima_nova_thin.ttf') format("truetype");
+    font-style: normal;
+}
