--- a/app/scripts/controllers/home/home.scss
+++ b/app/scripts/controllers/home/home.scss
@@ -1,22 +1,43 @@
+
 .bg-main {
 	width: 100%;
     height: 100%;
-    background: url(../../images/noise.png),linear-gradient(50deg,#ff4169 0,#7c26f8 100%);
+    /*background: url(../../images/noise.png),linear-gradient(50deg,#ff4169 0,#7c26f8 100%);*/
     left: 0;
     position: fixed;
     top: 0;
     z-index: -1;
+    background-color: $background--dark;
 
     .bg-main-img {
-	    background: url(../../images/bg-albums.png);
+	    /*background: url(../../images/bg-albums.png);*/
 	   	width: 100%;
 	    height: 100%;
 	    background-position: center;
     }
 }
 
+@media all and (max-width: 320px) {
+    .bg-main-img {
+        background: none;
+    }
+}
+
+.main-container {
+    margin-left: 20px;
+    margin-top: 30px;
+}
+
+.logo-wrapper {
+    padding: 10px 0px 5px 0px;
+}
+
 .logo-text {
+    font-family: 'ProximaNovaSemiBold';
 	font-size: 24px;
+    position: absolute;
+    top: 15px;
+    left: 60px;
 }
 
 .audio-player {
@@ -24,8 +45,35 @@
     color: #888;
 }
 
+.search-container {
+    background-color: $dark-spotify;
+    padding: 15px 10px;
+}
+
 .search-input {
-    border-radius: 10px;
+    border-radius: 3px;
     color: #555;
-    padding: 0 10px;
+    padding: 0 10px 0px 35px;
+}
+
+.input-wrapper {
+    background-color: #3e3e40;
+    width: 100%;
+    padding: 20px;
+}
+
+.spoticon-search-16 {
+    left: 25px;
+    position: absolute;
+    top: 5px;
+    color: #88898c;
+    &:before {
+        content: "\f140";
+        font-size: 18px;
+        font-family: "Spoticon";
+        font-style: normal;
+        font-weight: normal;
+        vertical-align: bottom;
+        display: inline-block;
+    }
 }
