--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,11 +1,14 @@
 // colors
-$font-color--dark: #333;
-$font-color--light: #fff;
+$font-title--gray: #7f8083;
+$font-color--light: #dfe0e6;
+$font-titles: #7f8083;
+$font-artist-brief: #9999a2;
 $background--light: #eee;
-$background--dark: #222;
-$blue: #1f8de2;
-$green: #1fe27b;
-$red: #e21f3f;
+$background--dark: #121314;
+$dark-spotify: #1c1c1f;
+$background-cover: #222326;
+$background-backcover: #272729;
+
 
 // spacing
 $full-space: 40px;
@@ -17,3 +20,6 @@ $font-size--sm: 12px;
 $font-size--md: 16px;
 $font-size--lg: 24px;
 $font-size--xl: 32px;
+
+// media queries breakpoints
+$bp-tablet: 768px;
